--- a/MessagePosting/Base.lproj/Main.storyboard
+++ b/MessagePosting/Base.lproj/Main.storyboard
@@ -219,10 +219,10 @@
             </objects>
             <point key="canvasLocation" x="-751" y="380"/>
         </scene>
-        <!--View Controller-->
+        <!--NUX-->
         <scene sceneID="xxY-XE-HHs">
             <objects>
-                <viewController id="sDS-xd-8i2" sceneMemberID="viewController">
+                <viewController title="NUX" id="sDS-xd-8i2" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="77L-eZ-fc3"/>
                         <viewControllerLayoutGuide type="bottom" id="1qH-2b-LRD"/>
@@ -230,12 +230,39 @@
                     <view key="view" contentMode="scaleToFill" id="TyO-xx-1hC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Instructions to do something..." lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dlI-zG-Dbd">
+                                <rect key="frame" x="16" y="20" width="568" height="386"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="386" id="fy5-BL-bdH"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xeT-cx-vku">
+                                <rect key="frame" x="269" y="550" width="37" height="30"/>
+                                <state key="normal" title="Done">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="kvA-dc-oU3" kind="custom" identifier="dismiss" customClass="DismissSegue" id="EV7-EI-hcd"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="dlI-zG-Dbd" firstAttribute="centerX" secondItem="77L-eZ-fc3" secondAttribute="centerX" id="fO2-7A-eL9"/>
+                            <constraint firstItem="dlI-zG-Dbd" firstAttribute="leading" secondItem="TyO-xx-1hC" secondAttribute="leadingMargin" id="gcs-g5-lBN"/>
+                            <constraint firstItem="xeT-cx-vku" firstAttribute="leading" secondItem="TyO-xx-1hC" secondAttribute="leading" constant="269" id="hpZ-58-OEG"/>
+                            <constraint firstItem="dlI-zG-Dbd" firstAttribute="top" secondItem="77L-eZ-fc3" secondAttribute="bottom" id="mhp-yV-7v4"/>
+                            <constraint firstAttribute="bottom" secondItem="xeT-cx-vku" secondAttribute="bottom" constant="20" symbolic="YES" id="uo1-Dq-h4L"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5ek-4t-Pwf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-752" y="1130"/>
+            <point key="canvasLocation" x="-728" y="1126"/>
         </scene>
     </scenes>
     <resources>
@@ -243,5 +270,6 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="KGy-s9-6B3"/>
+        <segue reference="EV7-EI-hcd"/>
     </inferredMetricsTieBreakers>
 </document>
