--- a/MessagePosting/Base.lproj/Main.storyboard
+++ b/MessagePosting/Base.lproj/Main.storyboard
@@ -107,28 +107,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Vqm-ks-zEr">
-                                <rect key="frame" x="16" y="92" width="568" height="210"/>
-                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                                <connections>
-                                    <outlet property="delegate" destination="r8Z-mf-Ohk" id="C9p-eT-tnG"/>
-                                </connections>
-                            </textView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="N characters left" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LQ3-FN-KJ8">
-                                <rect key="frame" x="16" y="72" width="181" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3gx-Mg-m7O" customClass="ImprovedTextView" customModule="MessagePosting" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="LQ3-FN-KJ8" firstAttribute="top" secondItem="fBi-ne-iNp" secondAttribute="bottom" constant="8" id="17b-UC-coo"/>
-                            <constraint firstItem="Vqm-ks-zEr" firstAttribute="leading" secondItem="arK-ut-J91" secondAttribute="leadingMargin" id="8kq-WP-xk9"/>
-                            <constraint firstItem="Vqm-ks-zEr" firstAttribute="top" secondItem="fBi-ne-iNp" secondAttribute="bottom" constant="28" id="Df4-4x-UV4"/>
-                            <constraint firstItem="Vqm-ks-zEr" firstAttribute="trailing" secondItem="arK-ut-J91" secondAttribute="trailingMargin" id="bhh-fA-GnM"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="3gx-Mg-m7O" secondAttribute="trailing" constant="-16" id="WdZ-Sj-jhb"/>
+                            <constraint firstItem="3gx-Mg-m7O" firstAttribute="top" secondItem="fBi-ne-iNp" secondAttribute="bottom" id="Zjx-QT-Tcz"/>
+                            <constraint firstItem="h9d-TG-WoA" firstAttribute="top" secondItem="3gx-Mg-m7O" secondAttribute="bottom" id="ljx-ov-N9V"/>
+                            <constraint firstItem="3gx-Mg-m7O" firstAttribute="leading" secondItem="arK-ut-J91" secondAttribute="leadingMargin" constant="-16" id="nmS-eT-dXA"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Yeah that's it. Great." id="lLD-ss-U9u">
@@ -139,8 +128,8 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="textFieldLengthLabel" destination="LQ3-FN-KJ8" id="WtE-Jl-md7"/>
-                        <outlet property="textView" destination="Vqm-ks-zEr" id="d7w-Pi-MoK"/>
+                        <outlet property="improvedTextView" destination="3gx-Mg-m7O" id="HVh-IB-Gfh"/>
+                        <outlet property="textViewBottomLayoutGuideConstraint" destination="ljx-ov-N9V" id="36T-Pv-MnM"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5Nl-cQ-XhS" userLabel="First Responder" sceneMemberID="firstResponder"/>
